Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140058

Tracepointgen doesn't generate metadata for enums

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.11.0 FF
    • 6.10, 6.11
    • Core: Other
    • None
    • Windows
    • 5f92047b6 (dev)

      Tracepointgen is supposed to generate metadata for enumerations using Q_TRACE_METADATA, but nothing is generated.

      This happens in windows.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anmaatta Antti Määttä
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change