Tracepointgen: handle windows absolute paths

Handle windows absolute paths when recursively searching include files.

Fixes: QTBUG-140058
Change-Id: Ie21a083f50602357efaa2c8d0ac87348a27fd129
Reviewed-by: Janne Roine <janne.roine@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit 5f92047b6e466739ac3b9db55f1400b8db874afd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>